src/test/ui/parser/bind-struct-early-modifiers.stderr
error: expected `,`
  --> $DIR/bind-struct-early-modifiers.rs:4:19
   |
LL |         Foo { ref x: ref x } => {},
   |                   ^

error[E0027]: pattern does not mention field `x`
  --> $DIR/bind-struct-early-modifiers.rs:4:9
   |
LL |         Foo { ref x: ref x } => {},
   |         ^^^^^^^^^^^^^^^^^^^^ missing field `x`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0027`.
